service khac roi

--- a/demo/src/main/resources/application.yaml
+++ b/demo/src/main/resources/application.yaml
@@ -1,7 +1,12 @@
+#server:
+#  port: 8080
+#  error:
+#    include-message: always
+
 data:
   mongodb:
     database: blt_web
-    uri: mongodb://root:password@35.198.240.131:27017/admin
+    uri: mongodb://root:password@0.0.0.0:27017/admin
     table:
       user: user
       order: order
@@ -11,7 +16,7 @@ spring:
     mongodb:
       auto-index-creation: true
       database: btl_web
-      uri: mongodb://root:password@35.198.240.131:27017/admin
+      uri: mongodb://root:password@0.0.0.0:27017/admin
 
 
 application:
